fix scrollbars appearing

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -170,7 +170,7 @@ ul {
   margin-top: 5rem;
   margin-left: calc(var(--search-width) + 1rem);
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding: .5rem;
 }
 
